--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -34,5 +34,5 @@ steps:
   inputs:
     command: 'build'
     projects: '**/*.csproj'
-    arguments: '--configuration Release'
+    arguments: '--configuration $(buildConfiguration)'
     versioningScheme: 'off'
