--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -29,3 +29,8 @@ steps:
     projects: '**/*.csproj'
     arguments: '--configuration $(buildConfiguration)'
     versioningScheme: 'off'
+
+- task: DotNetCoreCLI@2
+  inputs:
+    command: 'test'
+    projects: '**/*Tests.csproj'
