--- a/src/Console/Console.csproj
+++ b/src/Console/Console.csproj
@@ -9,4 +9,9 @@
       <ProjectReference Include="..\OSDP.Net\OSDP.Net.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.NETCore.Platforms" Version="3.0.0-preview5.19224.8" />
+      <PackageReference Include="runtime.osx-x64.Microsoft.NETCore.DotNetAppHost" Version="3.0.0-preview5-27626-15" />
+    </ItemGroup>
+
 </Project>
