--- a/src/Console/Console.csproj
+++ b/src/Console/Console.csproj
@@ -12,6 +12,7 @@
     <ItemGroup>
       <PackageReference Include="Microsoft.NETCore.Platforms" Version="3.0.0-preview5.19224.8" />
       <PackageReference Include="runtime.osx-x64.Microsoft.NETCore.DotNetAppHost" Version="3.0.0-preview5-27626-15" />
+      <PackageReference Include="Terminal.Gui" Version="0.24.0" />
     </ItemGroup>
 
 </Project>
