--- a/src/OSDP.Net/OSDP.Net.csproj
+++ b/src/OSDP.Net/OSDP.Net.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="LibLog" Version="5.0.6" />
     <PackageReference Include="System.IO.Ports" Version="4.6.0-preview5.19224.8" />
   </ItemGroup>
 
