--- a/src/Console/Console.csproj
+++ b/src/Console/Console.csproj
@@ -10,6 +10,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="log4net" Version="2.0.8" />
       <PackageReference Include="Microsoft.NETCore.Platforms" Version="3.0.0-preview5.19224.8" />
       <PackageReference Include="runtime.osx-x64.Microsoft.NETCore.DotNetAppHost" Version="3.0.0-preview5-27626-15" />
       <PackageReference Include="Terminal.Gui" Version="0.24.0" />
