Add security initialization command

--- a/src/Console/Console.csproj
+++ b/src/Console/Console.csproj
@@ -18,6 +18,9 @@
 
     <ItemGroup>
       <None Remove="appsettings.config" />
+      <None Update="log4net.config">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
 </Project>
