--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,8 +18,7 @@ steps:
 - task: UseDotNet@2
   inputs:
     packageType: 'sdk'
-    version: '3.0.100-preview9-014004'
-    includePreviewVersions: true
+    version: '3.0.x'
 
 - task: NuGetToolInstaller@0
 
