--- a/src/Console/Console.csproj
+++ b/src/Console/Console.csproj
@@ -11,8 +11,8 @@
 
     <ItemGroup>
       <PackageReference Include="log4net" Version="2.0.8" />
-      <PackageReference Include="Microsoft.NETCore.Platforms" Version="3.0.0-preview9.19421.4" />
-      <PackageReference Include="runtime.osx-x64.Microsoft.NETCore.DotNetAppHost" Version="3.0.0-preview9-19423-09" />
+      <PackageReference Include="Microsoft.NETCore.Platforms" Version="3.0.0" />
+      <PackageReference Include="runtime.osx-x64.Microsoft.NETCore.DotNetAppHost" Version="3.0.0" />
       <PackageReference Include="Terminal.Gui" Version="0.24.0" />
     </ItemGroup>
 
