--- a/src/OSDP.Net.Tests/OSDP.Net.Tests.csproj
+++ b/src/OSDP.Net.Tests/OSDP.Net.Tests.csproj
@@ -7,10 +7,10 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.NETCore.Platforms" Version="3.0.0-preview9.19421.4" />
+        <PackageReference Include="Microsoft.NETCore.Platforms" Version="3.0.0" />
         <PackageReference Include="nunit" Version="3.12.0" />
         <PackageReference Include="NUnit3TestAdapter" Version="3.15.1" />
-        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.2.0" />
+        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.3.0" />
     </ItemGroup>
 
     <ItemGroup>
