--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,11 +16,13 @@ variables:
 
 steps:
 - task: UseDotNet@2
+  displayName: 'Install .NET Core SDK'
   inputs:
     packageType: 'sdk'
     version: '3.0.x'
 
 - task: NuGetToolInstaller@0
+  displayName: 'Install NuGet'
 
 - task: DotNetCoreCLI@2
   inputs:
