--- a/src/OSDP.Net/OSDP.Net.csproj
+++ b/src/OSDP.Net/OSDP.Net.csproj
@@ -2,6 +2,10 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <PackageVersion>1.0.0-alpha1</PackageVersion>
+    <Title>OSDP.Net</Title>
+    <Authors>Jonathan Horvath</Authors>
   </PropertyGroup>
 
   <ItemGroup>
