--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -63,18 +63,18 @@ steps:
   displayName: 'dotnet publish for osx-x64'
   inputs:
     command: 'publish'
-    nobuild: true
     publishWebProjects: false
+    nobuild: true
     projects: 'src/Console/Console.csproj'
     arguments: '-r osx-x64 --configuration $(BuildConfiguration) /p:PublishSingleFile=true /p:PublishTrimmed=true --output $(Build.ArtifactStagingDirectory)'
 
-task: DotNetCoreCLI@2
+- task: DotNetCoreCLI@2
   condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/master'))
   displayName: 'dotnet publish for win-x64'
   inputs:
     command: 'publish'
-    nobuild: true
     publishWebProjects: false
+    nobuild: true
     projects: 'src/Console/Console.csproj'
     arguments: '-r win-x64 --configuration $(BuildConfiguration) /p:PublishSingleFile=true /p:PublishTrimmed=true --output $(Build.ArtifactStagingDirectory)'
 
