--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -64,10 +64,12 @@ steps:
   inputs:
     command: 'publish'
     publishWebProjects: false
-    nobuild: true
-    zipAfterPublish: false
     projects: 'src/Console/Console.csproj'
     arguments: '-r osx-x64 --configuration $(BuildConfiguration) /p:PublishSingleFile=true /p:PublishTrimmed=true --output $(Build.ArtifactStagingDirectory)/TestConsole/osx-x64'
+    zipAfterPublish: false
+    modifyOutputPath: false
+    versioningScheme: 'byEnvVar'
+    versionEnvVar: 'AssemblyVersion'
 
 - task: DotNetCoreCLI@2
   condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/master'))
@@ -75,10 +77,38 @@ steps:
   inputs:
     command: 'publish'
     publishWebProjects: false
-    nobuild: true
     zipAfterPublish: false
+    modifyOutputPath: false
     projects: 'src/Console/Console.csproj'
     arguments: '-r win-x64 --configuration $(BuildConfiguration) /p:PublishSingleFile=true /p:PublishTrimmed=true --output $(Build.ArtifactStagingDirectory)/TestConsole/win-x64'
+    versioningScheme: 'byEnvVar'
+    versionEnvVar: 'AssemblyVersion'
+
+- task: DotNetCoreCLI@2
+  condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/master'))
+  displayName: 'dotnet publish for linux-x64'
+  inputs:
+    command: 'publish'
+    publishWebProjects: false
+    zipAfterPublish: false
+    modifyOutputPath: false
+    projects: 'src/Console/Console.csproj'
+    arguments: '-r linux-x64 --configuration $(BuildConfiguration) /p:PublishSingleFile=true /p:PublishTrimmed=true --output $(Build.ArtifactStagingDirectory)/TestConsole/win-x64'
+    versioningScheme: 'byEnvVar'
+    versionEnvVar: 'AssemblyVersion'
+
+- task: DotNetCoreCLI@2
+  condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/master'))
+  displayName: 'dotnet publish for linux-arm'
+  inputs:
+    command: 'publish'
+    publishWebProjects: false
+    zipAfterPublish: false
+    modifyOutputPath: false
+    projects: 'src/Console/Console.csproj'
+    arguments: '-r linux-arm --configuration $(BuildConfiguration) /p:PublishSingleFile=true /p:PublishTrimmed=true --output $(Build.ArtifactStagingDirectory)/TestConsole/win-x64'
+    versioningScheme: 'byEnvVar'
+    versionEnvVar: 'AssemblyVersion'
 
 - task: PublishPipelineArtifact@1
   condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/master'))
