Only zip when building from Master branch

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -111,6 +111,7 @@ steps:
     versionEnvVar: 'AssemblyVersion'
 
 - task: ArchiveFiles@2
+  condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/master'))
   inputs:
     rootFolderOrFile: '$(Build.ArtifactStagingDirectory)/TestConsole'
     includeRootFolder: false
