Switch to Microsoft Logging

--- a/src/Console/Console.csproj
+++ b/src/Console/Console.csproj
@@ -18,6 +18,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="apache.log4net.Extensions.Logging" Version="2.0.0.12" />
       <PackageReference Include="log4net" Version="2.0.8" />
       <PackageReference Include="Microsoft.NETCore.Platforms" Version="3.1.0" />
       <PackageReference Include="Terminal.Gui" Version="0.65.0" />
