--- a/src/OSDP.Net/OSDP.Net.csproj
+++ b/src/OSDP.Net/OSDP.Net.csproj
@@ -4,6 +4,9 @@
     <TargetFramework>netstandard2.0</TargetFramework>
     <Title>OSDP.Net</Title>
     <Authors>Jonathan Horvath</Authors>
+    <Description>OSDP.Net is a .NET framework implementation of the Open Supervised Device Protocol(OSDP).</Description>
+    <PackageLicenseUrl>https://raw.githubusercontent.com/bytedreamer/OSDP.Net/develop/LICENSE.txt</PackageLicenseUrl>
+    <RepositoryUrl>https://github.com/bytedreamer/OSDP.Net</RepositoryUrl>
   </PropertyGroup>
 
   <ItemGroup>
