--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -48,6 +48,11 @@ steps:
     projects: '**/*Tests/*.csproj'
     arguments: '--configuration $(buildConfiguration)'
 
+- task: ResharperCli@2
+  inputs:
+    solutionOrProjectPath: 'src/OSDP.Net.sln'
+    failBuildLevelSelector: 'Warning'
+
 - task: DotNetCoreCLI@2
   condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/master'))
   displayName: 'dotnet pack'
