--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,7 +19,7 @@ variables:
   patch: 0
   #preview: $[counter(variables['patch'], 1)]
   AssemblyVersion: $(major).$(minor).$(patch)
-  NugetVersion: $(major).$(minor).$(patch)-beta4
+  NugetVersion: $(major).$(minor).$(patch)
 
 steps:
 - task: UseDotNet@2
