--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -51,8 +51,7 @@ steps:
   inputs:
     solutionOrProjectPath: 'src/OSDP.Net.sln'
     failBuildLevelSelector: 'Warning'
-    additionalArguments: '--no-swea'
-    resharperNuGetVersion: '2020.1.4'
+    additionalArguments: '--no-swea --DotNetCoreSdk=3.1.401'
 
 - task: DotNetCoreCLI@2
   condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/master'))
