--- a/src/OSDP.Net/OSDP.Net.csproj
+++ b/src/OSDP.Net/OSDP.Net.csproj
@@ -7,8 +7,12 @@
     <Description>OSDP.Net is a .NET framework implementation of the Open Supervised Device Protocol(OSDP).</Description>
     <PackageLicenseUrl>https://raw.githubusercontent.com/bytedreamer/OSDP.Net/develop/LICENSE.txt</PackageLicenseUrl>
     <RepositoryUrl>https://github.com/bytedreamer/OSDP.Net</RepositoryUrl>
-    <PackageIconUrl>&lt;img src="https://img.icons8.com/dusk/64/000000/network.png</PackageIconUrl>
+    <PackageIcon>icon.png</PackageIcon>
   </PropertyGroup>
+  
+  <ItemGroup>
+    <None Include="Images\icon.png" Pack="true" PackagePath="" />
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="3.1.7" />
