--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,7 +16,7 @@ variables:
   buildConfiguration: 'Release'
   major: 1
   minor: 0
-  patch: 3
+  patch: 4
   AssemblyVersion: $(major).$(minor).$(patch)
   NugetVersion: $(major).$(minor).$(patch)
 
@@ -47,11 +47,11 @@ steps:
     projects: '**/*Tests/*.csproj'
     arguments: '--configuration $(buildConfiguration)'
 
-#task: ResharperCli@2
-#inputs:
-#solutionOrProjectPath: 'src/OSDP.Net.sln'
-#failBuildLevelSelector: 'Warning'
-#additionalArguments: '--no-swea'
+- task: ResharperCli@2
+  inputs:
+    solutionOrProjectPath: 'src/OSDP.Net.sln'
+    failBuildLevelSelector: 'Warning'
+    additionalArguments: '--no-swea'
 
 - task: DotNetCoreCLI@2
   condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/master'))
