--- a/src/OSDP.Net/OSDP.Net.csproj
+++ b/src/OSDP.Net/OSDP.Net.csproj
@@ -8,6 +8,7 @@
     <PackageLicenseUrl>https://raw.githubusercontent.com/bytedreamer/OSDP.Net/develop/LICENSE.txt</PackageLicenseUrl>
     <RepositoryUrl>https://github.com/bytedreamer/OSDP.Net</RepositoryUrl>
     <PackageIcon>icon.png</PackageIcon>
+    <LangVersion>8</LangVersion>
   </PropertyGroup>
   
   <ItemGroup>
