--- a/src/OSDP.Net/OSDP.Net.csproj
+++ b/src/OSDP.Net/OSDP.Net.csproj
@@ -1,7 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
     <Title>OSDP.Net</Title>
     <Authors>Jonathan Horvath</Authors>
     <Description>OSDP.Net is a .NET framework implementation of the Open Supervised Device Protocol(OSDP).</Description>
@@ -9,6 +8,7 @@
     <RepositoryUrl>https://github.com/bytedreamer/OSDP.Net</RepositoryUrl>
     <PackageIcon>icon.png</PackageIcon>
     <LangVersion>8</LangVersion>
+    <TargetFrameworks>netcoreapp3.1;netstandard2.0</TargetFrameworks>
   </PropertyGroup>
   
   <ItemGroup>
