--- a/samples/SmartCardSample/SmartCardSample.csproj
+++ b/samples/SmartCardSample/SmartCardSample.csproj
@@ -9,4 +9,15 @@
       <ProjectReference Include="..\..\src\OSDP.Net\OSDP.Net.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="5.0.0" />
+      <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="5.0.0" />
+    </ItemGroup>
+
+    <ItemGroup>
+        <None Update="appsettings.json">
+            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </None>
+    </ItemGroup>
+
 </Project>
