--- a/src/Console/Console.csproj
+++ b/src/Console/Console.csproj
@@ -2,7 +2,7 @@
 
     <PropertyGroup>
         <OutputType>Exe</OutputType>
-        <TargetFramework>netcoreapp3.1</TargetFramework>
+        <TargetFramework>net5.0</TargetFramework>
         <LangVersion>8</LangVersion>
     </PropertyGroup>
 
@@ -21,7 +21,7 @@
     <ItemGroup>
       <PackageReference Include="apache.log4net.Extensions.Logging" Version="2.0.0.12" />
       <PackageReference Include="log4net" Version="2.0.12" />
-      <PackageReference Include="Microsoft.NETCore.Platforms" Version="5.0.0" />
+      <PackageReference Include="Microsoft.NETCore.Platforms" Version="5.0.1" />
       <PackageReference Include="Terminal.Gui" Version="0.90.3" />
     </ItemGroup>
 
