Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -27,6 +27,12 @@ steps:
     packageType: 'sdk'
     version: '5.x'
 
+- task: NuGetCommand@2
+  inputs:
+    command: 'restore'
+    restoreSolution: '**/*.sln'
+    feedsToUse: 'select'
+
 - task: DotNetCoreCLI@2
   displayName: 'dotnet build'
   inputs:
