--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,7 +16,7 @@ variables:
   buildConfiguration: 'Release'
   major: 2
   minor: 0
-  patch: 6
+  patch: 7
   AssemblyVersion: $(major).$(minor).$(patch)
   NugetVersion: $(major).$(minor).$(patch)
 
@@ -73,7 +73,7 @@ steps:
     command: 'publish'
     publishWebProjects: false
     projects: 'src/Console/Console.csproj'
-    arguments: '-r osx-x64 --configuration $(BuildConfiguration) /p:PublishSingleFile=true /p:PublishTrimmed=true --output $(Build.ArtifactStagingDirectory)/TestConsole/osx-x64'
+    arguments: '-r osx-x64 --configuration $(BuildConfiguration) /p:PublishSingleFile=true /p:IncludeAllContentForSelfExtract=true --self-contained true --output $(Build.ArtifactStagingDirectory)/TestConsole/osx-x64'
     zipAfterPublish: false
     modifyOutputPath: false
     versioningScheme: 'byEnvVar'
@@ -88,7 +88,7 @@ steps:
     zipAfterPublish: false
     modifyOutputPath: false
     projects: 'src/Console/Console.csproj'
-    arguments: '-r win-x64 --configuration $(BuildConfiguration) /p:PublishSingleFile=true /p:PublishTrimmed=true --output $(Build.ArtifactStagingDirectory)/TestConsole/win-x64'
+    arguments: '-r win-x64 --configuration $(BuildConfiguration) /p:PublishSingleFile=true /p:IncludeAllContentForSelfExtract=true --self-contained true --output $(Build.ArtifactStagingDirectory)/TestConsole/win-x64'
     versioningScheme: 'byEnvVar'
     versionEnvVar: 'AssemblyVersion'
 
@@ -101,7 +101,7 @@ steps:
     zipAfterPublish: false
     modifyOutputPath: false
     projects: 'src/Console/Console.csproj'
-    arguments: '-r linux-x64 --configuration $(BuildConfiguration) /p:PublishSingleFile=true /p:PublishTrimmed=true --output $(Build.ArtifactStagingDirectory)/TestConsole/linux-x64'
+    arguments: '-r linux-x64 --configuration $(BuildConfiguration) /p:PublishSingleFile=true /p:IncludeAllContentForSelfExtract=true --self-contained true --output $(Build.ArtifactStagingDirectory)/TestConsole/linux-x64'
     versioningScheme: 'byEnvVar'
     versionEnvVar: 'AssemblyVersion'
 
@@ -114,7 +114,7 @@ steps:
     zipAfterPublish: false
     modifyOutputPath: false
     projects: 'src/Console/Console.csproj'
-    arguments: '-r linux-arm --configuration $(BuildConfiguration) /p:PublishSingleFile=true /p:PublishTrimmed=true --output $(Build.ArtifactStagingDirectory)/TestConsole/linux-arm'
+    arguments: '-r linux-arm --configuration $(BuildConfiguration) /p:PublishSingleFile=true /p:IncludeAllContentForSelfExtract=true --self-contained true --output $(Build.ArtifactStagingDirectory)/TestConsole/linux-arm'
     versioningScheme: 'byEnvVar'
     versionEnvVar: 'AssemblyVersion'
 
