--- a/src/Console/Console.csproj
+++ b/src/Console/Console.csproj
@@ -22,6 +22,7 @@
       <PackageReference Include="apache.log4net.Extensions.Logging" Version="2.0.0.12" />
       <PackageReference Include="log4net" Version="2.0.12" />
       <PackageReference Include="Microsoft.NETCore.Platforms" Version="5.0.2" />
+      <PackageReference Include="Microsoft.NETFramework.ReferenceAssemblies" Version="1.0.2" />
       <PackageReference Include="Terminal.Gui" Version="1.1.1" />
     </ItemGroup>
 
