--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -54,7 +54,7 @@ steps:
   inputs:
     solutionOrProjectPath: 'src/OSDP.Net.sln'
     failBuildLevelSelector: 'Warning'
-    additionalArguments: '--no-swea'
+    additionalArguments: '--no-swea --build'
 
 - task: DotNetCoreCLI@2
   condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/master'))
