Temporarily disable ReSharper inspection

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -50,11 +50,11 @@ steps:
     projects: '**/*Tests/*.csproj'
     arguments: '--configuration $(buildConfiguration)'
 
-- task: ResharperCli@2
-  inputs:
-    solutionOrProjectPath: 'src/OSDP.Net.sln'
-    failBuildLevelSelector: 'Warning'
-    additionalArguments: '--no-swea --build'
+#- task: ResharperCli@2
+#  inputs:
+#    solutionOrProjectPath: 'src/OSDP.Net.sln'
+#    failBuildLevelSelector: 'Warning'
+#    additionalArguments: '--no-swea'
 
 - task: DotNetCoreCLI@2
   condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/master'))
