--- a/src/OSDP.Net/OSDP.Net.csproj
+++ b/src/OSDP.Net/OSDP.Net.csproj
@@ -9,6 +9,11 @@
     <PackageIcon>icon.png</PackageIcon>
     <LangVersion>default</LangVersion>
     <TargetFrameworks>net6.0;netstandard2.0</TargetFrameworks>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
+  </PropertyGroup>
+
+  <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
+    <DocumentationFile></DocumentationFile>
   </PropertyGroup>
   
   <ItemGroup>
