Move sample project to new location

--- a/src/samples/PivDataReader/PivDataReader.csproj
+++ b/src/samples/PivDataReader/PivDataReader.csproj
@@ -19,7 +19,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\OSDP.Net\OSDP.Net.csproj" />
+      <ProjectReference Include="..\..\OSDP.Net\OSDP.Net.csproj" />
     </ItemGroup>
 
 </Project>
