--- a/src/Console/Console.csproj
+++ b/src/Console/Console.csproj
@@ -20,10 +20,13 @@
 
     <ItemGroup>
       <PackageReference Include="apache.log4net.Extensions.Logging" Version="2.0.0.12" />
-      <PackageReference Include="log4net" Version="2.0.14" />
-      <PackageReference Include="Microsoft.NETCore.Platforms" Version="6.0.3" />
-      <PackageReference Include="Microsoft.NETFramework.ReferenceAssemblies" Version="1.0.2" />
-      <PackageReference Include="Terminal.Gui" Version="1.6.4" />
+      <PackageReference Include="log4net" Version="2.0.15" />
+      <PackageReference Include="Microsoft.NETCore.Platforms" Version="6.0.6" />
+      <PackageReference Include="Microsoft.NETFramework.ReferenceAssemblies" Version="1.0.3">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      </PackageReference>
+      <PackageReference Include="Terminal.Gui" Version="1.8.2" />
     </ItemGroup>
 
     <ItemGroup>
