--- a/src/OSDP.Net.Tests/OSDP.Net.Tests.csproj
+++ b/src/OSDP.Net.Tests/OSDP.Net.Tests.csproj
@@ -9,10 +9,14 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="apache.log4net.Extensions.Logging" Version="2.0.0.12" />
+        <PackageReference Include="log4net" Version="2.0.15" />
         <PackageReference Include="Microsoft.NETCore.Platforms" Version="6.0.6" />
+        <PackageReference Include="Moq" Version="4.18.2" />
         <PackageReference Include="nunit" Version="3.13.3" />
         <PackageReference Include="NUnit3TestAdapter" Version="4.2.1" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.3.2" />
+        <PackageReference Include="System.IO.Pipelines" Version="6.0.3" />
     </ItemGroup>
 
     <ItemGroup>
