GH98: Added p4diff/merge .orig files to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,7 @@ _UpgradeReport_Files/
 .DS_Store
 
 **/appsettings.config
+
+# For those who use p4diff/p4merge, ignore .orig files that
+# those tools seem to leave behind
+*.orig
