Introduce OSDP.Net.Messages.(ACU,PD) namespaces
In prep for supporting building/parsing messages that can originate
from both ACU and PD sides of the comm channel, this commit
introduces the two child namespaces under OSDP.Net.Messages

--- a/src/OSDP.Net/OSDP.Net.csproj
+++ b/src/OSDP.Net/OSDP.Net.csproj
@@ -32,4 +32,8 @@
     <Compile Remove="Utilities.cs" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Messages\PD\" />
+  </ItemGroup>
+
 </Project>
