#131 Basic processing of OSDPCap

--- a/src/OSDP.Net/OSDP.Net.csproj
+++ b/src/OSDP.Net/OSDP.Net.csproj
@@ -21,6 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.0" />
     <PackageReference Include="System.Collections" Version="4.3.0" />
     <PackageReference Include="System.IO.Ports" Version="7.0.0" />
@@ -31,6 +32,8 @@
   <ItemGroup>
     <Compile Remove="Utilities.cs" />
   </ItemGroup>
+
+
 
 
 </Project>
