--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -32,7 +32,7 @@ steps:
   inputs:
     command: 'build'
     projects: '**/*.csproj'
-    arguments: '--configuration $(buildConfiguration)'
+    arguments: '--configuration $(buildConfiguration) /p:ContinuousIntegrationBuild=true'
     versioningScheme: 'byEnvVar'
     versionEnvVar: 'AssemblyVersion'
 
