--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,7 +16,7 @@ variables:
   buildConfiguration: 'Release'
   major: 4
   minor: 1
-  patch: 4
+  patch: 5
   AssemblyVersion: $(major).$(minor).$(patch)
   NugetVersion: $(major).$(minor).$(patch)
 
@@ -56,7 +56,7 @@ steps:
   displayName: 'dotnet pack'
   inputs:
     command: 'pack'
-    nobuild: true
+    arguments: '--configuration $(buildConfiguration) /p:ContinuousIntegrationBuild=true'
     packagesToPack: 'src/OSDP.Net/OSDP.Net.csproj'
     versioningScheme: 'byEnvVar'
     versionEnvVar: 'NugetVersion'
