--- a/src/samples/CardReader/CardReader.csproj
+++ b/src/samples/CardReader/CardReader.csproj
@@ -12,4 +12,15 @@
       <ProjectReference Include="..\..\OSDP.Net\OSDP.Net.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+        <PackageReference Include="Microsoft.Extensions.Configuration" Version="7.0.0" />
+        <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="7.0.0" />
+    </ItemGroup>
+
+    <ItemGroup>
+        <None Update="appsettings.json">
+            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </None>
+    </ItemGroup>
+
 </Project>
