Changed default value of UseSecureChannel to false

--- a/src/samples/CardReader/appsettings.json
+++ b/src/samples/CardReader/appsettings.json
@@ -4,7 +4,7 @@
     "BaudRate": "9600",
     "DeviceAddress": "0",
     "ReaderNumber": "0",
-    "UseSecureChannel": "True",
+    "UseSecureChannel": "False",
     "SecurityKey": "303132333435363738393A3B3C3D3E3F",
     "MaximumReceivedSized": "128"
   }
