Fix beta label for version

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,9 +16,9 @@ variables:
   buildConfiguration: 'Release'
   major: 5
   minor: 0
-  patch: 0-beta
+  patch: 0
   AssemblyVersion: $(major).$(minor).$(patch)
-  NugetVersion: $(major).$(minor).$(patch)
+  NugetVersion: $(major).$(minor).$(patch)-beta
 
 steps:
 - task: UseDotNet@2
