--- a/ci/build.yml
+++ b/ci/build.yml
@@ -21,7 +21,12 @@ steps:
       nobuild: true
       projects: '**/*Tests/*.csproj'
       arguments: '--configuration $(buildConfiguration)'
-
+      
+  - task: CmdLine@2
+    displayName: 'Install ReSharper Tools'
+    inputs:
+      script: 'dotnet tool install -g JetBrains.ReSharper.GlobalTools --arch arm64'
+      
   - task: CmdLine@2
     displayName: 'Perform code inspection'
     inputs:
