--- a/ci/package.yml
+++ b/ci/package.yml
@@ -1,4 +1,10 @@
 steps:
+  - task: UseDotNet@2
+    displayName: 'Install .NET 8 SDK'
+    inputs:
+      packageType: 'sdk'
+      version: '8.x'
+      
   - task: DotNetCoreCLI@2
     displayName: 'dotnet pack'
     inputs:
