Update DeviceConfiguration settings to match updates

--- a/src/samples/CardReader/appsettings.json
+++ b/src/samples/CardReader/appsettings.json
@@ -3,7 +3,7 @@
     "PortName": "COM4",
     "BaudRate": "9600",
     "DeviceAddress": "0",
-    "DefaultSecurityKeyAllowed": "False",
+    "RequireSecurity": "False",
     "SecurityKey": "0011223344556677889900AABBCCDDEEFF"
   }
 }
